Made seperate component in order to animate page transitions. Will fix overflow in page transition anmiation.

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,6 +5,7 @@
   color: white;
   position: relative;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 /* // styling for resume button // */
