--- a/src/styles/projectpage.css
+++ b/src/styles/projectpage.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 5rem;
+  overflow-x: hidden;
 }
 
 .pageContent {
@@ -65,8 +66,7 @@
 
 .Repo:hover,
 .liveSite:hover {
-  background-color: lightgray;
-  color: black;
+  background-color: gray;
   cursor: pointer;
 }
 
